tests/ui/variance/variance-associated-consts.stderr
error: [o]
  --> $DIR/variance-associated-consts.rs:13:1
   |
LL | struct Foo<T: Trait> {
   | ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

